// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`github detection > gh_issue:should detect correct spots 1`] = `
[
  {
    "for": "id=:r2q: name=null className=prc-Textarea-TextArea-13q4j overtype-input",
    "spot": {
      "domain": "github.com",
      "number": 523,
      "slug": "diffplug/selfie",
      "title": "[jvm] docs for VCR",
      "type": "GH_ISSUE_APPEND",
      "unique_key": "github.com:diffplug/selfie:523",
    },
  },
]
`;

exports[`github detection > gh_issue_edit:should detect correct spots 1`] = `
[
  {
    "for": "id=:rc3: name=null className=prc-Textarea-TextArea-13q4j focus-visible overtype-input",
    "spot": {
      "isIssue": true,
      "type": "GH_EDIT",
      "unique_key": "DRAFT_STORAGE_UNSUPPORTED",
    },
  },
  {
    "for": "id=:ra7: name=null className=prc-Textarea-TextArea-13q4j overtype-input",
    "spot": {
      "domain": "github.com",
      "number": 56,
      "slug": "diffplug/gitcasso",
      "title": "Description",
      "type": "GH_ISSUE_APPEND",
      "unique_key": "github.com:diffplug/gitcasso:56",
    },
  },
]
`;

exports[`github detection > gh_issue_edit_multiple:should detect correct spots 1`] = `
[
  {
    "for": "id=:r76: name=null className=prc-Textarea-TextArea-13q4j overtype-input",
    "spot": {
      "isIssue": true,
      "type": "GH_EDIT",
      "unique_key": "DRAFT_STORAGE_UNSUPPORTED",
    },
  },
  {
    "for": "id=:r8k: name=null className=prc-Textarea-TextArea-13q4j focus-visible overtype-input",
    "spot": {
      "isIssue": true,
      "type": "GH_EDIT",
      "unique_key": "DRAFT_STORAGE_UNSUPPORTED",
    },
  },
  {
    "for": "id=:r5b: name=null className=prc-Textarea-TextArea-13q4j overtype-input",
    "spot": {
      "domain": "github.com",
      "number": 3,
      "slug": "diffplug/testing-deletable",
      "title": "Description",
      "type": "GH_ISSUE_APPEND",
      "unique_key": "github.com:diffplug/testing-deletable:3",
    },
  },
]
`;

exports[`github detection > gh_issue_new:should detect correct spots 1`] = `
[
  {
    "for": "id=:r34: name=null className=prc-Textarea-TextArea-13q4j focus-visible overtype-input",
    "spot": {
      "domain": "github.com",
      "slug": "diffplug/gitcasso",
      "title": "New issue title",
      "type": "GH_ISSUE_CREATE",
      "unique_key": "github.com:diffplug/gitcasso:new",
    },
  },
]
`;

exports[`github detection > gh_issue_new_complex_template:should detect correct spots 1`] = `
[
  {
    "for": "id=:ri7: name=null className=prc-Textarea-TextArea-13q4j",
    "spot": "NO_SPOT",
  },
  {
    "for": "id=:rjd: name=null className=prc-Textarea-TextArea-13q4j",
    "spot": "NO_SPOT",
  },
  {
    "for": "id= name=null className=prc-Textarea-TextArea-13q4j",
    "spot": "NO_SPOT",
  },
  {
    "for": "id=:rkn: name=null className=prc-Textarea-TextArea-13q4j focus-visible",
    "spot": "NO_SPOT",
  },
  {
    "for": "id=:rne: name=null className=prc-Textarea-TextArea-13q4j",
    "spot": "NO_SPOT",
  },
]
`;

exports[`github detection > gh_pr:should detect correct spots 1`] = `
[
  {
    "for": "id=feedback name=feedback className=form-control width-full mb-2",
    "spot": "NO_SPOT",
  },
  {
    "for": "id=new_comment_field name=comment[body] className=js-comment-field js-paste-markdown js-task-list-field js-quick-submit FormControl-textarea CommentBox-input js-size-to-fit size-to-fit js-session-resumable js-saved-reply-shortcut-comment-field overtype-input",
    "spot": {
      "domain": "github.com",
      "number": 517,
      "slug": "diffplug/selfie",
      "title": "Add "VCR" functionality
          #517",
      "type": "GH_PR_APPEND",
      "unique_key": "github.com:diffplug/selfie:517",
    },
  },
]
`;

exports[`github detection > gh_pr_edit:should detect correct spots 1`] = `
[
  {
    "for": "id=issue-3429313834-body name=pull_request[body] className=js-comment-field js-paste-markdown js-task-list-field js-quick-submit js-size-to-fit size-to-fit js-session-resumable CommentBox-input FormControl-textarea js-saved-reply-shortcut-comment-field focus-visible overtype-input",
    "spot": {
      "isIssue": false,
      "type": "GH_EDIT",
      "unique_key": "DRAFT_STORAGE_UNSUPPORTED",
    },
  },
  {
    "for": "id=new_comment_field name=comment[body] className=js-comment-field js-paste-markdown js-task-list-field js-quick-submit FormControl-textarea CommentBox-input js-size-to-fit size-to-fit js-session-resumable js-saved-reply-shortcut-comment-field overtype-input",
    "spot": {
      "domain": "github.com",
      "number": 58,
      "slug": "diffplug/gitcasso",
      "title": "Feat/expand corpus
 
 #58",
      "type": "GH_PR_APPEND",
      "unique_key": "github.com:diffplug/gitcasso:58",
    },
  },
]
`;

exports[`github detection > gh_pr_edit_multiple:should detect correct spots 1`] = `
[
  {
    "for": "id=issue-3454672384-body name=pull_request[body] className=js-comment-field js-paste-markdown js-task-list-field js-quick-submit js-size-to-fit size-to-fit js-session-resumable CommentBox-input FormControl-textarea js-saved-reply-shortcut-comment-field overtype-input",
    "spot": {
      "isIssue": false,
      "type": "GH_EDIT",
      "unique_key": "DRAFT_STORAGE_UNSUPPORTED",
    },
  },
  {
    "for": "id=convert-to-issue-body-3335416053 name=issue[body] className=form-control input-contrast comment-form-textarea js-comment-field js-paste-markdown js-task-list-field js-quick-submit js-size-to-fit size-to-fit js-session-resumable",
    "spot": "NO_SPOT",
  },
  {
    "for": "id=issuecomment-3335416053-body name=issue_comment[body] className=js-comment-field js-paste-markdown js-task-list-field js-quick-submit js-size-to-fit size-to-fit js-session-resumable CommentBox-input FormControl-textarea js-saved-reply-shortcut-comment-field focus-visible overtype-input",
    "spot": {
      "isIssue": false,
      "type": "GH_EDIT",
      "unique_key": "DRAFT_STORAGE_UNSUPPORTED",
    },
  },
  {
    "for": "id=new_comment_field name=comment[body] className=js-comment-field js-paste-markdown js-task-list-field js-quick-submit FormControl-textarea CommentBox-input js-size-to-fit size-to-fit js-session-resumable js-saved-reply-shortcut-comment-field overtype-input",
    "spot": {
      "domain": "github.com",
      "number": 5,
      "slug": "diffplug/testing-deletable",
      "title": "Update README.md
 #5",
      "type": "GH_PR_APPEND",
      "unique_key": "github.com:diffplug/testing-deletable:5",
    },
  },
]
`;

exports[`github detection > gh_pr_new:should detect correct spots 1`] = `
[
  {
    "for": "id=feedback name=feedback className=form-control width-full mb-2",
    "spot": "NO_SPOT",
  },
  {
    "for": "id=pull_request_body name=pull_request[body] className=js-comment-field js-paste-markdown js-task-list-field js-quick-submit FormControl-textarea CommentBox-input js-size-to-fit size-to-fit js-session-resumable js-saved-reply-shortcut-comment-field CommentBox-input--large overtype-input",
    "spot": {
      "base": "main",
      "domain": "github.com",
      "head": "cavia-porcellus:selfie:main",
      "slug": "diffplug/selfie",
      "title": "Update README.md",
      "type": "GH_PR_CREATE",
      "unique_key": "github.com:diffplug/selfie:main...cavia-porcellus:selfie:main",
    },
  },
]
`;

exports[`github detection > gh_project:should detect correct spots 1`] = `[]`;

exports[`github detection > gh_project_draft:should detect correct spots 1`] = `[]`;

exports[`github detection > gh_project_draft_edit:should detect correct spots 1`] = `
[
  {
    "for": "id=:r5a: name=null className=prc-Textarea-TextArea-13q4j overtype-input",
    "spot": {
      "isIssue": true,
      "type": "GH_EDIT",
      "unique_key": "DRAFT_STORAGE_UNSUPPORTED",
    },
  },
]
`;

exports[`github detection > gh_project_issue:should detect correct spots 1`] = `
[
  {
    "for": "id=:rbs: name=null className=prc-Textarea-TextArea-13q4j overtype-input",
    "spot": {
      "domain": "github.com",
      "number": 57,
      "slug": "diffplug/gitcasso",
      "title": "what about drafts?",
      "type": "GH_ISSUE_APPEND",
      "unique_key": "github.com:diffplug/gitcasso:57",
    },
  },
]
`;

exports[`github detection > gh_project_issue_edit:should detect correct spots 1`] = `
[
  {
    "for": "id=:rdh: name=null className=prc-Textarea-TextArea-13q4j overtype-input",
    "spot": {
      "isIssue": true,
      "type": "GH_EDIT",
      "unique_key": "DRAFT_STORAGE_UNSUPPORTED",
    },
  },
  {
    "for": "id=:rbs: name=null className=prc-Textarea-TextArea-13q4j overtype-input",
    "spot": {
      "domain": "github.com",
      "number": 57,
      "slug": "diffplug/gitcasso",
      "title": "what about drafts?",
      "type": "GH_ISSUE_APPEND",
      "unique_key": "github.com:diffplug/gitcasso:57",
    },
  },
]
`;

exports[`github detection > gh_project_issue_new:should detect correct spots 1`] = `
[
  {
    "for": "id=:r4t: name=null className=prc-Textarea-TextArea-13q4j overtype-input",
    "spot": {
      "domain": "github.com",
      "slug": "diffplug/gitcasso",
      "title": "Draft project title",
      "type": "GH_ISSUE_CREATE",
      "unique_key": "github.com:diffplug/gitcasso:new",
    },
  },
]
`;
